<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="java.lang.String" />

        <variable
            name="weatherModel"
            type="com.example.trivo.metaweather.model.Weather" />
    </data>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:padding="16dp"
        app:cardUseCompatPadding="true">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp">

            <TextView
                android:id="@+id/weatherTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@{weatherModel.city}"
                android:textColor="?attr/colorPrimary"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/weatherDetail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@{weatherModel.weather.weather_state_name}"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline2" />

            <ImageView
                android:id="@+id/weatherImage"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_marginBottom="8dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                app:imageUrl="@{weatherModel.imageUrl}"
                app:layout_constraintBottom_toTopOf="@+id/weatherDetail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/forecastDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@{weatherModel.weather.applicable_date}"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/weatherTitle" />

            <TextView
                android:id="@+id/maxLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/lblMax"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/forecastDate" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.75" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.25" />

            <TextView
                android:id="@+id/minLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/lblMin"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/maxLabel" />

            <TextView
                android:id="@+id/speedLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/lblWindSpeed"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/directionLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/lblWindDirection"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/speedLabel" />

            <TextView
                android:id="@+id/pressureLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/lblAirPressure"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/directionLabel" />

            <TextView
                android:id="@+id/humidityLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/lblHumidity"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/pressureLabel" />

            <TextView
                android:id="@+id/speedVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text='@{String.format("%.1f",weatherModel.weather.wind_speed)}'
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/directionVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@{weatherModel.weather.wind_direction_compass}"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/speedVal" />

            <TextView
                android:id="@+id/pressureVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text='@{String.format("%.1f",weatherModel.weather.air_pressure)}'
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/directionVal" />

            <TextView
                android:id="@+id/humidityVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@{String.valueOf(weatherModel.weather.humidity)}"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/pressureVal" />

            <TextView
                android:id="@+id/maxVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="24dp"
                android:text='@{String.format("%.1f",weatherModel.weather.max_temp)}'
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/forecastDate" />

            <TextView
                android:id="@+id/minVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:text='@{String.format("%.1f",weatherModel.weather.min_temp)}'
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/maxVal" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

</layout>